Fix responsive issue where picks, and choices, wrap too early on smaller screens

--- a/styles/_picks.scss
+++ b/styles/_picks.scss
@@ -6,6 +6,10 @@
 		display: flex;
 		justify-content: space-between;
 		margin: 2rem 0;
+		@media screen and (max-width: 450px) {
+			margin-left: -1rem;
+			margin-right: -1rem;
+		}
 	}
 	&__player,
 	&__computer {
@@ -22,7 +26,7 @@
 	width: 50%;
 	@media screen and (max-width: 650px) {
 		flex-wrap: wrap;
-		width: 60%;
+		width: 70%;
 		&__choice:last-child {
 			margin: auto;
 		}
