--- a/styles/_results.scss
+++ b/styles/_results.scss
@@ -10,11 +10,11 @@
 
 		&__player {
 			order: 1;
-			flex: 1 1 205px;
+			flex: 1 1 185px;
 		}
 		&__computer {
 			order: 2;
-			flex: 1 1 205px;
+			flex: 1 1 190px;
 		}
 		&__picks-outcome {
 			order: 3;
