--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,13 @@
   margin: 2rem 0;
 }
 
+@media screen and (max-width: 450px) {
+  .score__container {
+    margin-left: -1rem;
+    margin-right: -1rem;
+  }
+}
+
 .score__player, .score__computer {
   border: 2px solid var(--dark-gray);
   padding: 1rem;
@@ -36,7 +43,7 @@
   .picks {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    width: 60%;
+    width: 70%;
   }
   .picks__choice:last-child {
     margin: auto;
@@ -94,16 +101,16 @@
         -ms-flex-order: 1;
             order: 1;
     -webkit-box-flex: 1;
-        -ms-flex: 1 1 205px;
-            flex: 1 1 205px;
+        -ms-flex: 1 1 185px;
+            flex: 1 1 185px;
   }
   .results__computer {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
     -webkit-box-flex: 1;
-        -ms-flex: 1 1 205px;
-            flex: 1 1 205px;
+        -ms-flex: 1 1 190px;
+            flex: 1 1 190px;
   }
   .results__picks-outcome {
     -webkit-box-ordinal-group: 4;
